moved api to port 8000. getting user login to work on the frontend quasar app via auth-store
